# opengl-startup

./: CMakeLists.txt  main.cpp  main.cpp.back  shader.cpp  shader.h
src/: glad.c
